--- a/styles/globals.css
+++ b/styles/globals.css
@@ -79,10 +79,14 @@
   margin: 0;
 }
 
+@import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed:ital,wght@1,300&display=swap');
+
 html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+
+  font-family: 'Roboto Condensed', sans-serif;
 }
 
 body {
@@ -93,6 +97,10 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+
+::-webkit-scrollbar{
+  display: none;
 }
 
 a {
